# crwcr

./: CMakeLists.txt  README.md
src/: crwcralgorithm.cpp  crwcralgorithm.h  crwcrgpusolver.cu  crwcrgpusolver.h  crwcrkernel.cuh  crwcrsolver.cpp  crwcrsolver.h  imagecanvas.cpp  imagecanvas.h  initialization1d.cpp  initialization1d.h  main.cpp  mainwindow.cpp  mainwindow.h  pointlistgeometry.cpp  pointlistgeometry.h  resource.qrc  singleton.h  toolForm.ui  toolpanel.cpp  toolpanel.h  twolabelseed.cpp  twolabelseed.h
